--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.9.0",
-    "quick.db": "^9.1.6"
+    "fs": "^0.0.1-security",
+    "ms": "^2.1.3",
+    "quick.db": "^7.1.3"
   }
 }
